.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
Info: Nothing to build for ejercicio_5-2
Info: Nothing to build for ejercicio_5-2
23:27:28 **** Incremental Build of configuration Debug for project ejercicio_5-2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\ejercicio_5-2.o" "..\\src\\ejercicio_5-2.c" 
..\src\ejercicio_5-2.c: In function 'main':
..\src\ejercicio_5-2.c:30:13: error: 'tam' undeclared (first use in this function)
   30 |  for(i=0; i<tam; i++)
      |             ^~~
..\src\ejercicio_5-2.c:30:13: note: each undeclared identifier is reported only once for each function it appears in
23:27:37 **** Incremental Build of configuration Debug for project ejercicio_5-2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\ejercicio_5-2.o" "..\\src\\ejercicio_5-2.c" 
gcc -o ejercicio_5-2.exe "src\\ejercicio_5-2.o" 
Info: Nothing to build for ejercicio_5-2
23:28:00 **** Incremental Build of configuration Debug for project ejercicio_5-2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\ejercicio_5-2.o" "..\\src\\ejercicio_5-2.c" 
gcc -o ejercicio_5-2.exe "src\\ejercicio_5-2.o" 
Info: Nothing to build for ejercicio_5-2
Info: Nothing to build for ejercicio_5-2
